<resources>
    <string name="app_name">Messenger</string>
    <string name="extraordinary_chat">Extraordinary chat</string>
    <string name="application_name">You are welcomed by the mobile application for instant text messaging</string>
    <string name="login">Login</string>
    <string name="login_button">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="registration">Registration</string>
    <string name="signUpButton">Sign Up</string>
    <string name="haveAccountButton">I have a an account</string>
    <string name="emailname">Email</string>
    <string name="join_to_chat">Join to Chat</string>
    <string name="backToHelloButton">Back</string>
    <string name="backToSignUpButton">Back</string>
    <string name="get_data_with_retrofit">Get data with Retrofit</string>
    <string name="get_data_with_ktor">Get data with Ktor</string>
    <string name="heroes_button">Heroes</string>
    <string name="saveDS">Save DS</string>
    <string name="saveSP">Save PS</string>
    <string name="view_settings_text">See settings</string>
    <string name="view_settings_text1">See settings1</string>
    <string name="readDS">Read DS</string>
    <string name="readSP">Read SP</string>
    <string name="enter_key_save">Enter key...</string>
    <string name="enter_value_save">Enter value...</string>
    <string name="enter_key_read">Enter key...</string>
    <string name="inputCheckFile">Check</string>
    <string name="recoverFile">Восстановить</string>
    <string name="deleteFile">Удалить</string>
    <string name="textTema">Тема</string>
    <string name="textYazik">Язык</string>
    <string name="textUvedomleniya">Уведомления</string>
    <string name="textRazmerShrifta">Размер шрифта</string>
    <string name="buttonSaveSettings1DS">Save with DS</string>
    <string name="buttonSaveSettings1SH">Save with SH</string>
    <string name="buttonReadSettings1DS">Read with DS</string>
    <string name="buttonReadSettings1SH">Read with SH</string>
    <string name="buttonCheckFileInDocuments">Check heroes_6.txt in Documents</string>
    <string name="buttonDeleteFileInDocuments">Delete heroes_6.txt from Documents</string>
    <string name="buttonRecoverFileInDocuments">Recover heroes_6.txt in Documents</string>
</resources>
