<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/loginbkg"
    tools:context=".SignUpFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/custom_edittext">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registration"
                android:id="@+id/loginText"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/lavender"/>

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/username"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="@string/username"
                android:drawableLeft="@drawable/baseline_person_24"
                android:textColor="#00A6FF"
                android:textColorHint="#00A6FF"
                android:drawablePadding="8dp"/>

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/emailname"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="17dp"
                android:padding="8dp"
                android:hint="@string/emailname"
                android:drawableLeft="@drawable/baseline_mark_email_read_24"
                android:textColor="#00A6FF"
                android:textColorHint="#00A6FF"
                android:drawablePadding="8dp"/>

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/password"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"
                android:padding="8dp"
                android:hint="@string/password"
                android:textColorHint="#00A6FF"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:textColor="#00A6FF"
                android:drawablePadding="8dp"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/signUpButton"
                android:id="@+id/signUpButton"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/lavender"
                app:cornerRadius = "20dp"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/haveAccountButton"
                android:id="@+id/haveAccountButton"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/lavender"
                app:cornerRadius = "20dp"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/backToHelloButton"
                android:id="@+id/backToHelloButton"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/lavender"
                app:cornerRadius = "20dp"/>


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</LinearLayout>