<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/loginbkg"
    tools:context=".HelloFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/heading"
        android:layout_width="300dp"
        android:layout_height="110dp"
        android:gravity="center"
        android:text="@string/extraordinary_chat"
        android:textColor="#00A6FF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.259" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/description"
        android:layout_width="300dp"
        android:layout_height="110dp"
        android:gravity="center"
        android:text="@string/application_name"
        android:textColor="#00A6FF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/myButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="450dp"
        android:text="@string/join_to_chat"
        android:textColor="#FFFFFF"
        android:backgroundTint="@color/lavender"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/view_settings_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="500dp"
        android:backgroundTint="@color/lavender"
        android:gravity="center"
        android:text="@string/view_settings_text"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/view_settings_button_1"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="550dp"
        android:backgroundTint="@color/lavender"
        android:gravity="center"
        android:text="@string/view_settings_text1"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>